- Adding JS logic and build process.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -58,6 +58,7 @@ li {
             padding: 0 2.5rem;
             text-align: center;
             text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
+            user-select: none;
 
             transition: opacity 300ms;
             transition-delay: 0;
@@ -78,6 +79,7 @@ li {
 
 .avengers-single {
     width: 100%;
+    max-width: 1080px;
     height: 100%;
     margin: 0 auto;
 
