- Adding a LoaderView which is instantiated by the controller. - This view will be communicated to via events, and will be used during async server calls.

--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -1,6 +1,9 @@
 // Importing Libraries.
 @import "../libs/normalize";
 
+// Importing modular styles.
+@import "./partials/loader";
+
 /******************************
     General
 ******************************/
