--- a/js/src/templates/preferencesView.hbs
+++ b/js/src/templates/preferencesView.hbs
@@ -1,13 +1,15 @@
-<label for="gender-toggle">Filter Gender:</label>
-<select id="gender-toggle" class="dropdown filter js-filter" data-filter-key="gender">
-    <option value="" selected></option>
-    <option value="Male">Male</option>
-    <option value="Female">Female</option>
-</select>
+{{#each filterOptions}}
+    <label for="{{{@key}}}-toggle">Filter {{{@key}}}:</label>
+    <select id="{{{@key}}}-toggle" class="dropdown filter js-filter" data-filter-key="{{{@key}}}">
+        {{#each this}}
+            <option value="{{{this}}}">{{{this}}}</option>
+        {{/each}}
+    </select>
+{{/each}}
 
 <label for="order-by">Order By:</label>
 <select id="order-by" class="dropdown order-by js-order-by">
-    <option value="" selected></option>
-    <option value="alias">Alias</option>
-    <option value="gender">Gender</option>
+    {{#each orderOptions}}
+        <option value="{{{this}}}" {{#compare this ../orderSelected}}selected{{/compare}}>{{{this}}}</option>
+    {{/each}}
 </select>
