--- a/js/src/templates/listView.hbs
+++ b/js/src/templates/listView.hbs
@@ -1,6 +1,6 @@
 <ul class="avengers__list">
     {{#each this}}
-        <li class="avengers__person js-avenger-row" style="background-image: url('{{{image}}}');" data-model-id="{{{id}}}">
+        <li class="avengers__person js-avenger-row" style="background-image: url('{{{image}}}');" data-model-slug="{{{slug}}}">
             <span class="avengers__name">{{{alias}}}</span>
         </li>
     {{/each}}
