Adding filtering logic and updating ListView so changes to the filters will trigger re-render of the grid.

--- a/js/src/templates/listView.hbs
+++ b/js/src/templates/listView.hbs
@@ -1,9 +1,2 @@
-<ul class="avengers__list">
-    {{#each this}}
-        <li class="avengers__person js-avenger-row" style="background-image: url('{{{image}}}');" data-model-slug="{{{slug}}}">
-            <span class="avengers__name">{{{alias}}}</span>
-        </li>
-    {{/each}}
-</ul>
-
+<ul class="avengers__list js-avengers-list"></ul>
 <div class="avengers__preferences-panel js-preferences-panel"></div>
