--- a/js/src/templates/preferencesView.hbs
+++ b/js/src/templates/preferencesView.hbs
@@ -15,3 +15,7 @@
         <option value="{{{this}}}" {{#compare this ../orderSelected}}selected{{/compare}}>{{{this}}}</option>
     {{/each}}
 </select>
+
+<div class="toggle js-toggle">
+    <span>&gt;</span>
+</div>
