Implementing AJAX loading of UI translations, and usage of handlebars helpers to use them.

--- a/js/src/templates/detailedView.hbs
+++ b/js/src/templates/detailedView.hbs
@@ -1,4 +1,4 @@
 <div class="avengers-single__header" style="background-image: url('{{{image}}}');"></div>
 <h1 class="avengers-single__title">"{{{real_name}}}" a.k.a. {{{alias}}}</h1>
 <p class="avengers-single__description">{{{description}}}</p>
-<a class="avengers-single__button js-back-button">Back to List</a>
+<a class="avengers-single__button js-back-button">{{ i18n_gettext 'Back to List' }}</a>
